--- a/Weather_widget/css/style.css
+++ b/Weather_widget/css/style.css
@@ -56,6 +56,8 @@ body {
 }
 
 .widget {
+  max-width: 30rem;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -73,4 +75,30 @@ body {
   overflow: hidden;
   opacity: 0.9;
   background-image: url("../img/sky01.jpg");
+}
+
+.recomendations {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.recomendation__description {
+  display: block;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.recomendation__description:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.recomendation__icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.error-container {
+  text-align: center;
+  width: 100%;
+  color: orange;
 }
